# vips-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: arithmetic.rs  colour.rs  error.rs  image.rs  lib.rs  operation.rs  operator.rs  vips.rs
vips-sys/: Cargo.toml  build.rs
vips-sys/src/: vips-sys.h
